     `battery.runtime` (after a shorter `device.model`). Note that the
     expected response is shorter than in other dialects (38 vs. 39 bytes),
     so if this change breaks anything for your UPS that reported the values
     above correctly (e.g. the `ups.firmware` version becomes shorter or
     none of these are reported), please let NUT developers know. [#2980]

 - `pijuice` driver updates:
   * Converted to NUT standard use of `status_set()` with single-token values.
     [issue #2708]

 - `snmp-ups` driver updates:
   * Added support for "fun"/"nuf" methods called from mapping tables to
     report back to the driver that an argument value was not supported,
     so `setvar()` or `instcmd()` can not proceed safely and should return
     `STAT_SET_CONVERSION_FAILED` or `STAT_INSTCMD_CONVERSION_FAILED`. [#3017]
   * Fixed `ups.test.date` to be semi-static in `apc-mib` mapping, so it
     would be queried more than once per driver up-time. [issue #3011]
   * Fixed debug-logging around `SU_FLAG_STATIC` entries to clarify when
     they get skipped. [issue #3011]

 - `usbhid-ups` driver updates:
   * Added support for "fun"/"nuf" methods called from mapping tables to
     report back to the driver that an argument value was not supported,
     so `setvar()` or `instcmd()` can not proceed safely and should return
     `STAT_SET_CONVERSION_FAILED` or `STAT_INSTCMD_CONVERSION_FAILED`. [#3017]
   * The `cps-hid` subdriver's existing mechanism for fixing broken report
     descriptors was extended to cover a newly reported case of nominal UPS
     power being incorrectly reported due to an unrealistically low maximum
     threshold, as seen with a EC850LCD device. [issue #2917, PR #2919]
   * Added APC BVKxxxM2 and BKxxxM2-CH to list of devices where
     `lbrb_log_delay_sec=N` may be necessary to address spurious LOWBATT
     and REPLACEBATT events. [PR #2942, PR #3007, issue #2347, issue #3006]

 - New NUT drivers: