@@ -182,6 +182,10 @@ https://github.com/networkupstools/nut/milestone/9
      so if this change breaks anything for your UPS that reported the values
      above correctly (e.g. the `ups.firmware` version becomes shorter or
      none of these are reported), please let NUT developers know. [#2980]
+   * Revised `voltronic` protocol to suppress alarm "UPS is in ECO Mode",
+     using "buzzword mode" settings more correctly than in the previous
+     iteration, shipped in NUT v2.8.3 release (as PR #2750 for issue #2708).
+     [issue #2494]
 
  - `pijuice` driver updates:
    * Converted to NUT standard use of `status_set()` with single-token values.
